// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag in Dark Theme renders Customization 1`] = `
Array [
  <div
    className="flex flex-wrap md:flex-nowrap items-center justify-around gap-2 w-full"
  >
    <textarea
      className="block appearance-none resize-none w-full p-4 text-moon-16 bg-gohan rounded-moon-s-sm transition-shadow shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none text-krillin placeholder:text-whis"
      placeholder="Custom text colours"
      rows={1}
    />
    <textarea
      className="block appearance-none resize-none w-full p-4 text-moon-16 text-bulma bg-gohan rounded-moon-s-sm placeholder:text-trunks transition-shadow shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none outline-chichi hover:outline-piccolo focus:outline-krillin"
      placeholder="Custom border colours"
      rows={1}
    />
    <textarea
      className="block appearance-none resize-none w-full p-4 text-moon-16 text-bulma rounded-moon-s-sm placeholder:text-trunks transition-shadow shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none bg-roshi-10"
      placeholder="Custom background colour"
      rows={1}
    />
  </div>,
  <div
    className="flex flex-wrap md:flex-nowrap items-center justify-around gap-2 w-full"
  >
    <textarea
      className="block appearance-none w-full p-4 text-moon-16 text-bulma bg-gohan rounded-moon-s-sm placeholder:text-trunks transition-shadow shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none resize-y"
      placeholder="Resize vertically"
      rows={3}
    />
    <textarea
      className="block appearance-none w-full p-4 text-moon-16 text-bulma bg-gohan rounded-moon-s-sm placeholder:text-trunks transition-shadow shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none resize-x"
      placeholder="Resize horizontally"
      rows={3}
    />
    <textarea
      className="block appearance-none w-full p-4 text-moon-16 text-bulma bg-gohan rounded-moon-s-sm placeholder:text-trunks transition-shadow shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none resize"
      placeholder="Resize vertically and horizontally"
      rows={3}
    />
  </div>,
]
`;

exports[`Tag in Dark Theme renders Deafult 1`] = `
<textarea
  className="block appearance-none resize-none w-full p-4 text-moon-16 text-bulma bg-gohan rounded-moon-s-sm placeholder:text-trunks transition-shadow shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none"
/>
`;

exports[`Tag in Dark Theme renders Disabled 1`] = `
<textarea
  className="block appearance-none resize-none w-full p-4 text-moon-16 text-bulma bg-gohan rounded-moon-s-sm placeholder:text-trunks transition-shadow shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none opacity-30 cursor-not-allowed"
  disabled={true}
  placeholder="Disabled"
/>
`;

exports[`Tag in Light Theme renders Customization 1`] = `
Array [
  <div
    className="flex flex-wrap md:flex-nowrap items-center justify-around gap-2 w-full"
  >
    <textarea
      className="block appearance-none resize-none w-full p-4 text-moon-16 bg-gohan rounded-moon-s-sm transition-shadow shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none text-krillin placeholder:text-whis"
      placeholder="Custom text colours"
      rows={1}
    />
    <textarea
      className="block appearance-none resize-none w-full p-4 text-moon-16 text-bulma bg-gohan rounded-moon-s-sm placeholder:text-trunks transition-shadow shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none outline-chichi hover:outline-piccolo focus:outline-krillin"
      placeholder="Custom border colours"
      rows={1}
    />
    <textarea
      className="block appearance-none resize-none w-full p-4 text-moon-16 text-bulma rounded-moon-s-sm placeholder:text-trunks transition-shadow shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none bg-roshi-10"
      placeholder="Custom background colour"
      rows={1}
    />
  </div>,
  <div
    className="flex flex-wrap md:flex-nowrap items-center justify-around gap-2 w-full"
  >
    <textarea
      className="block appearance-none w-full p-4 text-moon-16 text-bulma bg-gohan rounded-moon-s-sm placeholder:text-trunks transition-shadow shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none resize-y"
      placeholder="Resize vertically"
      rows={3}
    />
    <textarea
      className="block appearance-none w-full p-4 text-moon-16 text-bulma bg-gohan rounded-moon-s-sm placeholder:text-trunks transition-shadow shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none resize-x"
      placeholder="Resize horizontally"
      rows={3}
    />
    <textarea
      className="block appearance-none w-full p-4 text-moon-16 text-bulma bg-gohan rounded-moon-s-sm placeholder:text-trunks transition-shadow shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none resize"
      placeholder="Resize vertically and horizontally"
      rows={3}
    />
  </div>,
]
`;

exports[`Tag in Light Theme renders Deafult 1`] = `
<textarea
  className="block appearance-none resize-none w-full p-4 text-moon-16 text-bulma bg-gohan rounded-moon-s-sm placeholder:text-trunks transition-shadow shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none"
/>
`;

exports[`Tag in Light Theme renders Disabled 1`] = `
<textarea
  className="block appearance-none resize-none w-full p-4 text-moon-16 text-bulma bg-gohan rounded-moon-s-sm placeholder:text-trunks transition-shadow shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none opacity-30 cursor-not-allowed"
  disabled={true}
  placeholder="Disabled"
/>
`;

exports[`Tag in RTL renders Customization 1`] = `
<div
  dir="rtl"
>
  <div
    className="flex flex-wrap md:flex-nowrap items-center justify-around gap-2 w-full"
  >
    <textarea
      className="block appearance-none resize-none w-full p-4 text-moon-16 bg-gohan rounded-moon-s-sm transition-shadow shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none text-krillin placeholder:text-whis"
      placeholder="Custom text colours"
      rows={1}
    />
    <textarea
      className="block appearance-none resize-none w-full p-4 text-moon-16 text-bulma bg-gohan rounded-moon-s-sm placeholder:text-trunks transition-shadow shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none outline-chichi hover:outline-piccolo focus:outline-krillin"
      placeholder="Custom border colours"
      rows={1}
    />
    <textarea
      className="block appearance-none resize-none w-full p-4 text-moon-16 text-bulma rounded-moon-s-sm placeholder:text-trunks transition-shadow shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none bg-roshi-10"
      placeholder="Custom background colour"
      rows={1}
    />
  </div>
  <div
    className="flex flex-wrap md:flex-nowrap items-center justify-around gap-2 w-full"
  >
    <textarea
      className="block appearance-none w-full p-4 text-moon-16 text-bulma bg-gohan rounded-moon-s-sm placeholder:text-trunks transition-shadow shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none resize-y"
      placeholder="Resize vertically"
      rows={3}
    />
    <textarea
      className="block appearance-none w-full p-4 text-moon-16 text-bulma bg-gohan rounded-moon-s-sm placeholder:text-trunks transition-shadow shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none resize-x"
      placeholder="Resize horizontally"
      rows={3}
    />
    <textarea
      className="block appearance-none w-full p-4 text-moon-16 text-bulma bg-gohan rounded-moon-s-sm placeholder:text-trunks transition-shadow shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none resize"
      placeholder="Resize vertically and horizontally"
      rows={3}
    />
  </div>
</div>
`;

exports[`Tag in RTL renders Deafult 1`] = `
<div
  dir="rtl"
>
  <textarea
    className="block appearance-none resize-none w-full p-4 text-moon-16 text-bulma bg-gohan rounded-moon-s-sm placeholder:text-trunks transition-shadow shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none"
  />
</div>
`;

exports[`Tag in RTL renders Disabled 1`] = `
<div
  dir="rtl"
>
  <textarea
    className="block appearance-none resize-none w-full p-4 text-moon-16 text-bulma bg-gohan rounded-moon-s-sm placeholder:text-trunks transition-shadow shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none opacity-30 cursor-not-allowed"
    disabled={true}
    placeholder="Disabled"
  />
</div>
`;
